<resources>
    <string name="app_name">BiologyProject</string>
    <string name="project_name">水生生物识别</string>

    <string name="copy_right">Copyright @2017 水生生物采集</string>

    <string name="account_hint">输入你的手机号码</string>
    <string name="password_hint">输入你的密码</string>
    <string name="sign_up_account_hint">输入有效的手机号码</string>
    <string name="sign_up_password_hint">输入6~20位的密码</string>
    <string name="confirm_password_hint">确认你的密码</string>
    <string name="user_name_hint">输入你的姓名</string>


    <string name="login">登录</string>
    <string name="sign_up">注册</string>
    <string name="logining">登录中...</string>
    <string name="signUping">注册中...</string>
    <string name="go_sign_up">没有账号，前往注册</string>
    <string name="sign_out">注销账号</string>

    <string name="setting">设置</string>

    <string name="btn_text_collect">没错，就是这个生物啦</string>
    <string name="collect">开始收集</string>
    <string name="course">查看流程</string>

    <string name="net">捕抓网</string>
    <string name="bucket">水桶</string>
    <string name="cup">杯子</string>
    <string name="box">箱子</string>
    <string name="gloves">手套</string>

</resources>
