<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/linearTopBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/blue">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:src="@drawable/location_white"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            />
        <TextView
            android:id="@+id/tv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="华南师范大学东区的小溪"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:singleLine="true"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@mipmap/img_home_critter"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_name"
        android:textSize="@dimen/titleTextSize"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/btn_course"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/course"
        android:textColor="@color/white"
        android:background="@drawable/bg_circle_pink"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"/>
    <Button
        android:id="@+id/btn_collect"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:text="@string/collect"
        android:textColor="@color/white"
        android:background="@drawable/bg_circle_green"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"/>
</LinearLayout>