<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue_sky"
    tools:context=".activity.LoginActivity">
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:visibility="visible">
        <ImageView
            android:layout_centerHorizontal="true"
            android:id="@+id/imageView"
            android:layout_width="@dimen/login_logo_width"
            android:layout_height="@dimen/login_logo_width"
            android:src="@mipmap/img_home_critter"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">
        <ImageView
            android:layout_width="@dimen/edit_drawable_height"
            android:layout_height="@dimen/edit_drawable_height"
            android:src="@drawable/account_white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/account_hint"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@drawable/color_cursor"
            android:paddingLeft="60dp"
            android:background="@drawable/bg_edit_text"
            android:singleLine="true"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_account_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/rl_account"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:visibility="visible"
        />

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_account"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/edit_margin_top">
        <ImageView
            android:layout_width="@dimen/edit_drawable_height"
            android:layout_height="20dp"
            android:src="@drawable/password_white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:textCursorDrawable="@drawable/color_cursor"
            android:inputType="textPassword"
            android:paddingLeft="60dp"
            android:background="@drawable/bg_edit_text"
            android:singleLine="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_password_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/rl_password"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:background="@drawable/bg_btn_selector"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/rl_password"
        android:layout_marginTop="40dp"
        android:enabled="false"
        />

    <TextView
        android:id="@+id/tv_go_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/go_sign_up"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_below="@+id/btn_login"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
