<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black"
    tools:context="com.sun.biologyproject.activity.SignUpActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp">
        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/back_img_width"
            android:layout_height="@dimen/back_img_height"
            android:src="@drawable/back_white"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            />

        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:textSize="30sp"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@+id/imageView"
                android:layout_centerVertical="true"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>
        </RelativeLayout>

        <RelativeLayout
        android:id="@+id/rl_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">
        <ImageView
            android:layout_width="@dimen/edit_drawable_height"
            android:layout_height="@dimen/edit_drawable_height"
            android:src="@drawable/account_white"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/sign_up_account_hint"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:paddingLeft="60dp"
            android:background="@drawable/bg_edit_text"
            android:textCursorDrawable="@drawable/color_cursor"
            android:singleLine="true"/>
    </RelativeLayout>
        <TextView
            android:id="@+id/tv_account_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/rl_account"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:visibility="visible"
            />

        <RelativeLayout
            android:id="@+id/rl_userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_account"
            android:layout_marginTop="@dimen/edit_margin_top"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin">
            <ImageView
                android:layout_width="@dimen/edit_drawable_height"
                android:layout_height="@dimen/edit_drawable_height"
                android:src="@drawable/name_white"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            <EditText
                android:id="@+id/et_userName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/user_name_hint"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/color_cursor"
                android:paddingLeft="60dp"
                android:background="@drawable/bg_edit_text"
                android:singleLine="true"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_userName_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/rl_userName"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />


        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_userName"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/edit_margin_top">
            <ImageView
                android:layout_width="@dimen/edit_drawable_height"
                android:layout_height="@dimen/edit_drawable_height"
                android:src="@drawable/password_white"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/sign_up_password_hint"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:paddingLeft="60dp"
                android:background="@drawable/bg_edit_text"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/color_cursor"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_password_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_light"
            android:layout_marginTop="5dp"
            android:layout_below="@+id/rl_password"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            />

        <RelativeLayout
            android:id="@+id/rl_confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_password"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/edit_margin_top">
            <ImageView
                android:layout_width="@dimen/edit_drawable_height"
                android:layout_height="@dimen/edit_drawable_height"
                android:src="@drawable/password_white"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
            <EditText
                android:id="@+id/et_confirmPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirm_password_hint"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:paddingLeft="60dp"
                android:background="@drawable/bg_edit_text"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textCursorDrawable="@drawable/color_cursor"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_confirmPassword_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_confirmPassword"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginTop="5dp"
            android:textColor="@android:color/holo_red_light"/>

        <Button
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:layout_below="@+id/rl_confirmPassword"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:background="@drawable/bg_btn_selector"
            android:enabled="false"/>
    </RelativeLayout>

</RelativeLayout>
